--- a/index.html
+++ b/index.html
@@ -3,4 +3,4 @@ Welcome to my website
 hellooo
 Hero
 
-<a href="journal/">Click here to read my journal</a> 
+<a href="Journal/">Click here to read my journal</a> 
