--- a/minimal.html
+++ b/minimal.html
@@ -2,15 +2,12 @@
 <html lang="en">
 	<head>
 		<title>My Minimal Website</title>
-
-
+		<script src="js/init.js"></script>
 	</head>
 	<body>
 		<h1>My Mininal Website</h1>
 		<p>Hello! Welcome to my minimal website!</p>
-
+		<h1>I love html</h1>
 	</body>
-
-
 
 </html>
