--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
-Welcome to my website
- My name is Paula
-hellooo
-Hero
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+	<title>My Website</title>
+	<script src="js/init.js"></script>
+	</head>
+	<body>
+		<p>Welcome to my website, my name is Paula. Hellooo Heron.</p>
 
 <a href="Journal/">Click here to read my journal</a> 
+
+	</body>
+
+</html>
