--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <a href="Journal/">Click here to read my journal</a> 
 
-		<p>"Give up when your done, not tired" <q cite="https://www.pinterest.com/pin/844493673222587/"</q></p>
+		<q cite="https://www.pinterest.com/pin/844493673222587/">Give up when you're done, not tired</q>
 	</body>
 
 </html>
