--- a/code_practice.html
+++ b/code_practice.html
@@ -4,39 +4,22 @@
 	<head>
 		<title>Code Practice Classwork</title>
 		<script src="js/init.js"></script>
-		<h1>How to use VIM</h1>
-		<h2>Code Practice Assignment</h2>
+
 	</head>
 	<body> 
+		<h1>How to use VIM</h1>
+                <h2>Code Practice Assignment</h2>
 		<code>What is VIM?</code>
 		<pre>It's based on shortcuts, called the Vim language, which can make coding and writing faster and more efficient.<br>With Vim, you can jump to any specific text position and rapidly make precise edits.</pre>
 		<h3>Basic VIM Commands:</h3>
 		<ol>
-			<li>":syntax on"</li>
-				<ul>
-					<li>the rules that define the structure of a language</li>
-				</ul>
-			<li>"i" or "a"</li>
-				<ul>
-					<li>Pressing i (for insert) will directly switch to Insert mode.</li>
-					<li> Pressing a (for append) will switch to Insert mode and move the cursor after the current character.</li>
-				</ul>
-			<li>"esc"</li>
-				<ul>
-					<li>Pressing esc will switch from Insert mode to Normal mode</li>
-				</ul> 
-			<li>":wq"</li>
-				<ul>
-					<li>To save and exit VIM</li>
-				</ul>
-			<li>":w"</li>
-				<ul>
-					<li>To save VIM</li>
-				</ul>
-			<li>":q"</li>
-				<ul>
-					<li>To quit/exit VIM</li>
-				</ul>
+			<li>":syntax on"=The rules that define the structure of a language</li>
+			<li>"i" or "a"=Pressing i (for insert) will directly switch to Insert mode. Pressing a (for append) will switch to Insert mode and move the cursor after the current character.</li>
+			<li>"esc"=Pressing esc will switch from Insert mode to Normal mode</li>
+			<li>":wq"=To save and exit VIM.</li>
+			<li>":w"=To save VIM</li>
+			<li>":q"= To quit/exit VIM</li>
+		</ol>
 
 		<p>In VIM, you can <kbd>Ctrl + C</kbd> to copy and <kbd>Ctrl + V</kbd> to paste</p>
-		<p>In VIM, when you make a typo mistake, it tells you at the bottom <samp>"Not an editor command"</samp> in red. 
+		<p>In VIM, when you make a typo mistake, it tells you at the bottom <samp>"Not an editor command"</samp> in red.</p> 
