--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <a href="Journal/">Click here to read my journal</a> 
 
 		<q cite="https://www.pinterest.com/pin/844493673222587/">Give up when you're done, not tired</q>
+
+		<img src="/image/Me_small.JPG.HEIC" alt="Small Me">
 	</body>
 
 </html>
