--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 
 		<q cite="https://www.pinterest.com/pin/844493673222587/">Give up when you're done, not tired</q>
 
-		<img src="/image/Me_small.JPG.HEIC" alt="Small Me">
+		<img src=/image/Me_small.JPG"
+     alt="Me"
+     srcset="image/Me_medium.JPG,
+             image/Me_large.JPG">
+
 	</body>
 
 </html>
