--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-	<title>My Website</title>
-	<script src="js/init.js"></script>
+		<title>My Website</title>
+		<script src="js/init.js"></script>
 	</head>
 	<body>
-		<p>Welcome to my website, my name is Paula. Hellooo Heron.</p>
+		<h1>Welcome to my website!</h1>
+		<p>My name is Paula</p>
+		<p>Hellooo Heron</p>
+		<blockquote cite="http://www.pinterest.com/pin/844493673222587/">Give up when you're done, not tired"</blockquote>
 
-<a href="Journal/">Click here to read my journal</a> 
-
-		<q cite="https://www.pinterest.com/pin/844493673222587/">Give up when you're done, not tired</q>
+		<a href="Journal/">Click here to read my journal</a> 
 
 		<img src=/image/Me_small.JPG"
-     alt="Me"
-     srcset="image/Me_medium.JPG,
+     		alt="Me"
+    		srcset="image/Me_medium.JPG,
              image/Me_large.JPG">
 
 	</body>
