--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<h1>Welcome to my website!</h1>
 		<p>My name is Paula</p>
 		<p>Hellooo Heron</p>
-		<blockquote cite="http://www.pinterest.com/pin/844493673222587/">Give up when you're done, not tired"</blockquote>
+		<blockquote cite="http://www.pinterest.com/pin/844493673222587/">Give up when you're done, not tired</blockquote>
 
 		<a href="Journal/">Click here to read my journal</a> 
 
