--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
 		<a href="Journal/">Click here to read my journal</a> 
 
-		<img src=/image/Me_small.JPG
+		<img src="/image/Me_small.JPG"
      		alt="Me"
-    		srcset=image/Me_medium.JPG,image/Me_large.JPG>
+    		srcset="image/Me_medium.JPG,image/Me_large.JPG">
 
 	</body>
 
