--- a/recipes/recipe1.html
+++ b/recipes/recipe1.html
@@ -126,6 +126,14 @@
 				<li>You can use store-bought dulce de leche. It might be kinda lumpy straight out of the jar and/or can so be sure to whisk it until it’s smooth.</li>
 				<li>These are best stored in an airtight container at room temperature.</li>
 				<li>The manjar blanco/dulce de leche can be made up to 3 days in advance and kept in an airtight container in the fridge.</li>
-			</ul>		
+			</ul>
+
+			<hr>
+
+		<h2>Similar Recipes</h2>
+	
+		<img src="https://i.pinimg.com/736x/b9/70/31/b970319febb3086d2b58416ccc5fc6d1.jpg" alt="Lemon Alfajores from pinterest" style="width:128px;height:128px;">
+		<img src="https://i.pinimg.com/736x/f4/d8/aa/f4d8aadf124876b041eec254012f7b85.jpg" alt="Choco Chip Alfajores from rionegro" style="width:128px;height:128px;">
+		<img src="https://i.pinimg.com/736x/7e/e0/56/7ee05625d341e7e2a0e7d9e42aff5882.jpg" alt="Almond Alfajores from pinterest" style="width:128px;height:128px;">
 	</body>
 </html>
