--- a/recipes/recipe1.html
+++ b/recipes/recipe1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<title>Alfajores</title>
-		<script>"../js/init.js"</script>
+		<script src="../js/init.js"></script>
 	</head>
 
 	<body>
