--- a/grid2.html
+++ b/grid2.html
@@ -57,11 +57,11 @@
 </head>
 <body>
         <div class="grid">
-                <div class="box1">H</div>
-                <div class="box2">S1</div>
-                <div class="box3">S2</div>
-                <div class="box4">M</div>
-                <div class="box5">F</div>
+                <div class="box1">Header</div>
+                <div class="box2">Side</div>
+                <div class="box3">Side</div>
+                <div class="box4">Main</div>
+                <div class="box5">Footer</div>
         </div>
 </body>
 </html>
