nothing changed just pushing it again

--- a/grid2.html
+++ b/grid2.html
@@ -12,6 +12,7 @@
         height:80vh;
         text-align:center;
         font-size:4em;
+	gap:10px
 	}
 .box1 {
 	grid-column-start:1;
@@ -19,7 +20,6 @@
         grid-row-start:1;
         grid-row-end:2;
         background-color:green;
-        border:white solid 3px;
 	}
 .box2 {
 	grid-column-start:1;
@@ -27,7 +27,6 @@
         grid-row-start:2;
         grid-row-end:7;
         background-color:green;
-        border:white solid 3px;
 	}
 .box3 {
 	grid-column-start:6;
@@ -35,7 +34,6 @@
         grid-row-start:2;
         grid-row-end:7;
         background-color:green;
-        border:white solid 3px;
 	}
 .box4 {
 	grid-column-start:3;
@@ -43,7 +41,6 @@
         grid-row-start:2;
         grid-row-end:7;
         background-color:green;
-        border:white solid 3px;
 	}
 .box5 {
 	grid-column-start:1;
@@ -51,7 +48,6 @@
         grid-row-start:7;
         grid-row-end:8;
         background-color:green;
-        border:white solid 3px;
 	}
 </style>
 </head>
