--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
 		<a href="Journal/" style="color:RoyalBlue">Click here to read my journal</a> 
 
-		<img src="/image/Me_small.JPG"
+		<img src="/image/Me_JPG"
      		alt="Me"
-    		srcset="image/Me_medium.JPG,image/Me_large.JPG">
+    		srcset="/image/Me_small.JPG,image/Me_medium.JPG,image/Me_large.JPG">
 
 
 	</body>
