--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 		<script src="js/init.js"></script>
 		<link href="favicon.ico" rel="shortcut icon" type="image/x-icon" >
 	</head>
-	<body style="background-color:#FFEBCD">
-		<h1 style="color:#000000">Welcome to my website!</h1>
+	<body>
+		<h1>Welcome to my website!</h1>
 		<p>My name is Paula</p>
 		<p>Hellooo Heron</p>
-		<blockquote cite="http://www.pinterest.com/pin/844493673222587/" style="background-color:#DEB887; width:250px">Give up when you're done, not tired</blockquote>
+		<blockquote cite="http://www.pinterest.com/pin/844493673222587/">Give up when you're done, not tired</blockquote>
 
-		<a href="Journal/" style="color:RoyalBlue">Click here to read my journal</a> 
+		<a href="Journal/">Click here to read my journal</a> 
 
 		<img src="/image/Me.JPG"
      		alt="Me"
