--- a/projects.html
+++ b/projects.html
@@ -5,8 +5,19 @@
 	<script>js/init.js</script> 
 </head> 
 <body> 
-	<header><h1>Projects</h1></header>
-		
-
+	<header>
+		<h1>Projects</h1>
+	</header>
+	<main>
+		<h2>Projects Listed:</h2>
+		<ol>
+			<li>Project name..</li>
+			<li>Project name..</li>
+			<li>Project name..</li>
+		</ol>
+	</main> 
+	<section>
+		<h5>Hope you enjoyed this page, please don't hesitate to check out the rest! :)</h5>
+	</section>
 </body>
 </html>
