--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 		<title>My Website</title>
 		<script src="js/init.js"></script>
 		<link href="favicon.ico" rel="shortcut icon" type="image/x-icon" >
+		<link rel="stylesheet" type="text/css" href="styles.css">
 	</head>
 	<body>
-		<h1>Welcome to my website!</h1>
+		<div class="grid">
+		<header><h1>Welcome to my website!</h1></header>
 		<p>My name is Paula</p>
-		<p>Hellooo Heron</p>
 		<blockquote cite="http://www.pinterest.com/pin/844493673222587/">Give up when you're done, not tired</blockquote>
 
 		<a href="Journal/">Click here to read my journal</a> 
