--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 	<body>
 		<div class="grid">
 		<header><h1>Welcome to my website!</h1></header>
-		<p>My name is Paula</p>
-		<blockquote cite="http://www.pinterest.com/pin/844493673222587/">Give up when you're done, not tired</blockquote>
+		<p id="intro">My name is Paula</p>
+		<blockquote id="quote" cite="http://www.pinterest.com/pin/844493673222587/">Give up when you're done, not tired</blockquote>
 
-		<a href="Journal/">Click here to read my journal</a> 
+		<a id="journal" href="Journal/">Click here to read my journal</a> 
 
-		<img src="/image/Me.JPG"
+		<img id="me" src="/image/Me.JPG"
      		alt="Me"
     		srcset="/image/Me_small.JPG,image/Me_medium.JPG,image/Me_large.JPG">
 
