--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head> 
 	<title>Projects</title> 
-	<script>js/init.js</script> 
+	<script src="js/init.js"></script> 
 </head> 
 <body> 
 	<header>
