--- a/index.html
+++ b/index.html
@@ -14,11 +14,7 @@
 
 		<a id="journal" href="Journal/">Click here to read my journal</a> 
 
-		<img id="me" src="/image/Me.JPG"
-     		alt="Me"
-    		srcset="/image/Me_small.JPG,image/Me_medium.JPG,image/Me_large.JPG">
-
-
+		<img id="me" src="/image/me.jpg" alt="me">
 	</body>
 
 </html>
