--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 		<a id="journal" href="Journal/">Click here to read my journal</a> 
 
-		<img id="me" src="/image/me_small.png" alt="me" srcset="/images/me_small.png 480w,/images/me_medium.png 800w,/images/me_large.png 1200w" sizes="(max-width: 480px) 95vw,(max-width: 800px) 45vw,30vw">
+		<img id="me" src="/image/me.jpg" alt="me" srcset="/images/me.jpg 480w,/images/me_medium.png 800w,/images/me_large.png 1200w" sizes="(max-width: 480px) 95vw,(max-width: 800px) 45vw,30vw">
 
 	</body>
 
