--- a/projects.html
+++ b/projects.html
@@ -11,9 +11,9 @@
 	<main>
 		<h2>Projects Listed:</h2>
 		<ol>
-			<li>Project name..</li>
-			<li>Project name..</li>
-			<li>Project name..</li>
+			<li><a href="Library/index.html">Library</a></li>
+			<li><a href="recipes/index.html">Family Recipe</a></li>
+			<li><a href="zoo/index.html">Zoo</a></li>
 		</ol>
 	</main> 
 	<section>
