--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
 		<link href="favicon.ico" rel="shortcut icon" type="image/x-icon" >
 		<link rel="stylesheet" type="text/css" href="styles.css">
 	</head>
-	<body>
+	<body> 
 		<div class="grid">
 		<header><h1>Welcome to my website!</h1></header>
 		<p id="intro">My name is Paula</p>
 		<blockquote id="quote" cite="http://www.pinterest.com/pin/844493673222587/">Give up when you're done, not tired</blockquote>
 
-		<a id="journal" href="Journal/">Click here to read my journal</a> 
+		<a class="links" href="Journal/">Click here to read my journal</a> 
+		<a class="links" href="projects.html/">Projects</a>
 
-		<img id="me" src="/image/me.jpg" alt="me" srcset="/images/me.jpg 480w,/images/me_medium.png 800w,/images/me_large.png 1200w" sizes="(max-width: 480px) 95vw,(max-width: 800px) 45vw,30vw">
-
-	</body>
-
+		<img id="me" src="/image/me.jpeg" alt="me" srcset="/images/me.jpeg 240w,/images/me_medium.jpeg 300w,/images/me_large.jpeg 720w" sizes="(min-width:960px) 300px, 100vw">
+</div>
+</body>
 </html>
