--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<blockquote id="quote" cite="http://www.pinterest.com/pin/844493673222587/">Give up when you're done, not tired</blockquote>
 
 		<a id="journal" href="Journal/">Click here to read my journal</a> 
-		<a id="projects" href="/projects.html">Projects</a>
+		<a id="projects" href="projects.html">Projects</a>
 
 		<img id="me" src="/image/me.jpeg" alt="me" srcset="/images/me.jpeg 240w,/images/me_medium.jpeg 300w,/images/me_large.jpeg 720w" sizes="(min-width:960px) 300px, 100vw">
 </div>
