--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<a id="journal" href="Journal/">Click here to read my journal</a> 
 		<a id="projects" href="projects.html">Projects</a>
 
-		<img id="me" src="image/me.jpeg" alt="me" srcset="/images/me.jpeg 240w,/images/me_medium.jpeg 300w,/images/me_large.jpeg 720w" sizes="(min-width:960px) 300px, 100vw">
+		<img id="me" src="image/me.jpg" alt="me">
 </div>
 </body>
 </html>
