--- a/recipes/index.html
+++ b/recipes/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Paula's Recipes</title>
 		<script src="../js/init.js"></script>
+		<link rel="stylesheet" type="text/css" href="styles.css">
 	</head>
 
 	<body>
@@ -10,6 +11,7 @@
 		<h1> Welcome to my family's recipe book!</h1>
 		<h2> These are some recipes! </h2>
 		<p>This is my family's recipe book. I will be sharing two of my favorite recipes that I always make at home. One is a dessert and the other is a main dish from Peru. <p>
+	<nav>	
 		<ul>
 			<li>
 				<a href="recipe1.html">Alfajores</a> 
@@ -18,5 +20,6 @@
 				<a href="recipe2.html">Arroz Chaufa</a>
 			</li>
 		</ul>
+	</nav>
 	</body>
 </html> 
