--- a/recipes/recipe1.html
+++ b/recipes/recipe1.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Alfajores</title>
 		<script src="../js/init.js"></script>
+		<link rel="stylesheet" type="text/css" href="styles.css">
 	</head>
 
 	<body>
