--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head> 
 	<title>Projects</title> 
-	<script src="js/init.js"></script> 
+	<script src="js/init.js"></script>
+	<link rel="stylesheet" type="text/css" href="styles.css"> 
 </head> 
 <body> 
 	<header>
