--- a/zoo/index.html
+++ b/zoo/index.html
@@ -33,20 +33,20 @@
                 <tbody>
                     <tr>
                         <td>Monday - Friday</td>
-                        <td>9:00 AM - 6:00 PM</td>
-                        <td>$15</td>
+                        <td class="time">9:00 AM - 6:00 PM</td>
+                        <td class="price">$15</td>
                     </tr>
                     <tr>
                         <td>Saturday - Sunday</td>
-                        <td>10:00 AM - 8:00 PM</td>
-                        <td>$20</td>
+                        <td class="time">10:00 AM - 8:00 PM</td>
+                        <td class="price">$20</td>
                     </tr>
                 </tbody>
             </table>
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 City Zoo. All rights reserved.</p>
+        <p id="copyrights">&copy; 2024 City Zoo. All rights reserved.</p>
     </footer>
 </body>
 </html>
