--- a/grid-pixel-art.html
+++ b/grid-pixel-art.html
@@ -95,15 +95,27 @@
 .grid-container div:nth-child(n+160):nth-child(-n+161) {background-color:#5b79ec;}
 .grid-container div:nth-child(n+165):nth-child(-n+166) {background-color:#5b79ec;}  
 .grid-container div:nth-child(154), .grid-container div:nth-child(156),.grid-container div:nth-child(158), .grid-container div:nth-child(163) {background-color:#5b79ec;}
-
-
+.grid-container div:nth-child(n+171):nth-child(-n+173) {background-color:#5b79ec;}
+.grid-container div:nth-child(n+185):nth-child(-n+187) {background-color:#5b79ec;}
+    .grid-container div:nth-child(177),
+    .grid-container div:nth-child(179),
+    .grid-container div:nth-child(181), 
+.grid-container div:nth-child(182) {
+        background-color:#5b79ec;}
 /* "MILK" white */
 .grid-container div:nth-child(153),
     .grid-container div:nth-child(155),
     .grid-container div:nth-child(157),
 .grid-container div:nth-child(159),
 .grid-container div:nth-child(162),
-.grid-container div:nth-child(164)
+.grid-container div:nth-child(164), 
+.grid-container div:nth-child(174),
+.grid-container div:nth-child(176),
+.grid-container div:nth-child(178), 
+.grid-container div:nth-child(175),
+.grid-container div:nth-child(180),
+.grid-container div:nth-child(183),
+.grid-container div:nth-child(184)
  {background-color:white;}
     /*
         We can use this syntax to select a range:
