--- a/grid-pixel-art.html
+++ b/grid-pixel-art.html
@@ -102,6 +102,27 @@
     .grid-container div:nth-child(181), 
 .grid-container div:nth-child(182) {
         background-color:#5b79ec;}
+.grid-container div:nth-child(n+192):nth-child(-n+194) {background-color:#5b79ec;}
+ .grid-container div:nth-child(196),
+.grid-container div:nth-child(198), 
+.grid-container div:nth-child(200),
+.grid-container div:nth-child(202), 
+.grid-container div:nth-child(203), 
+.grid-container div:nth-child(217),
+.grid-container div:nth-child(219),
+.grid-container div:nth-child(221),
+.grid-container div:nth-child(224),
+.grid-container div:nth-child(226)
+ {background-color:#5b79ec;}
+.grid-container div:nth-child(n+206):nth-child(-n+208) {background-color:#5b79ec;}
+.grid-container div:nth-child(n+213):nth-child(-n+215) {background-color:#5b79ec;}
+.grid-container div:nth-child(n+228):nth-child(-n+229) {background-color:#5b79ec;}
+.grid-container div:nth-child(n+234):nth-child(-n+250) {background-color:#5b79ec;}
+.grid-container div:nth-child(255),
+.grid-container div:nth-child(271)
+ {background-color:#5b79ec;}
+
+
 /* "MILK" white */
 .grid-container div:nth-child(153),
     .grid-container div:nth-child(155),
@@ -117,6 +138,24 @@
 .grid-container div:nth-child(183),
 .grid-container div:nth-child(184)
  {background-color:white;}
+.grid-container div:nth-child(195),
+.grid-container div:nth-child(197),
+.grid-container div:nth-child(199),
+.grid-container div:nth-child(201),
+.grid-container div:nth-child(204),
+.grid-container div:nth-child(205), 
+.grid-container div:nth-child(216), 
+.grid-container div:nth-child(218), 
+.grid-container div:nth-child(220),
+.grid-container div:nth-child(222), 
+.grid-container div:nth-child(223),
+.grid-container div:nth-child(225), 
+.grid-container div:nth-child(227)
+ {background-color:white;}
+
+
+/* inner white areas */ 
+.grid-container div:nth-child(n+256):nth-child(-n+270) {background-color:#fff;}
     /*
         We can use this syntax to select a range:
         - `div:nth-child(n+41)`: Selects all `div` elements that are the 41st child or later.
