--- a/grid-pixel-art.html
+++ b/grid-pixel-art.html
@@ -119,9 +119,21 @@
 .grid-container div:nth-child(n+228):nth-child(-n+229) {background-color:#5b79ec;}
 .grid-container div:nth-child(n+234):nth-child(-n+250) {background-color:#5b79ec;}
 .grid-container div:nth-child(255),
-.grid-container div:nth-child(271)
+.grid-container div:nth-child(271), 
+.grid-container div:nth-child(276),
+.grid-container div:nth-child(292),
+.grid-container div:nth-child(297),
+.grid-container div:nth-child(313),
+.grid-container div:nth-child(318),
+.grid-container div:nth-child(334), 
+.grid-container div:nth-child(339),
+.grid-container div:nth-child(355),
+.grid-container div:nth-child(360),
+.grid-container div:nth-child(376),
+.grid-container div:nth-child(381),
+.grid-container div:nth-child(397)
  {background-color:#5b79ec;}
-
+.grid-container div:nth-child(n+402):nth-child(-n+418) {background-color:#5b79ec;}
 
 /* "MILK" white */
 .grid-container div:nth-child(153),
@@ -131,14 +143,15 @@
 .grid-container div:nth-child(162),
 .grid-container div:nth-child(164), 
 .grid-container div:nth-child(174),
+.grid-container div:nth-child(175),
 .grid-container div:nth-child(176),
 .grid-container div:nth-child(178), 
-.grid-container div:nth-child(175),
 .grid-container div:nth-child(180),
 .grid-container div:nth-child(183),
 .grid-container div:nth-child(184)
  {background-color:white;}
 .grid-container div:nth-child(195),
+.grid-container div:nth-child(196),
 .grid-container div:nth-child(197),
 .grid-container div:nth-child(199),
 .grid-container div:nth-child(201),
@@ -153,9 +166,64 @@
 .grid-container div:nth-child(227)
  {background-color:white;}
 
-
 /* inner white areas */ 
+.grid-container div:nth-child(n+49):nth-child(-n+57) {background-color:#fff;}
+.grid-container div:nth-child(n+70):nth-child(-n+78) {background-color:#fff;}
+
+
+/* face */ 
 .grid-container div:nth-child(n+256):nth-child(-n+270) {background-color:#fff;}
+.grid-container div:nth-child(n+281):nth-child(-n+287) {background-color:#fff;}
+.grid-container div:nth-child(n+303):nth-child(-n+307) {background-color:#fff;}
+.grid-container div:nth-child(n+324):nth-child(-n+328) {background-color:#fff;}
+.grid-container div:nth-child(n+344):nth-child(-n+350) {background-color:#fff;}
+.grid-container div:nth-child(n+367):nth-child(-n+369) {background-color:#fff;}
+.grid-container div:nth-child(n+382):nth-child(-n+396) {background-color:#fff;}
+.grid-container div:nth-child(277), 
+.grid-container div:nth-child(278),
+.grid-container div:nth-child(290),
+.grid-container div:nth-child(291),
+.grid-container div:nth-child(298),
+.grid-container div:nth-child(301),
+.grid-container div:nth-child(310),
+.grid-container div:nth-child(312),
+.grid-container div:nth-child(319),
+.grid-container div:nth-child(333),
+.grid-container div:nth-child(340),
+.grid-container div:nth-child(354),
+.grid-container div:nth-child(361),
+.grid-container div:nth-child(364),
+.grid-container div:nth-child(365),
+.grid-container div:nth-child(371),
+.grid-container div:nth-child(372),
+.grid-container div:nth-child(375)
+ {background-color:white;}
+.grid-container div:nth-child(n+320):nth-child(-n+323) {background-color:black;}
+.grid-container div:nth-child(n+329):nth-child(-n+332) {background-color:black;}
+.grid-container div:nth-child(279),
+.grid-container div:nth-child(280),
+.grid-container div:nth-child(288),
+.grid-container div:nth-child(289),
+.grid-container div:nth-child(299),
+.grid-container div:nth-child(300),
+.grid-container div:nth-child(302),
+.grid-container div:nth-child(308),
+.grid-container div:nth-child(309),
+.grid-container div:nth-child(311),
+.grid-container div:nth-child(342),
+.grid-container div:nth-child(343),
+.grid-container div:nth-child(351),
+.grid-container div:nth-child(352),
+.grid-container div:nth-child(366),
+.grid-container div:nth-child(370)
+ {background-color:black;}
+.grid-container div:nth-child(341),
+.grid-container div:nth-child(353),
+.grid-container div:nth-child(362),
+.grid-container div:nth-child(363),
+.grid-container div:nth-child(373),
+.grid-container div:nth-child(374)
+ {background-color:pink;}
     /*
         We can use this syntax to select a range:
         - `div:nth-child(n+41)`: Selects all `div` elements that are the 41st child or later.
