--- a/grid-pixel-art.html
+++ b/grid-pixel-art.html
@@ -178,7 +178,8 @@
 .grid-container div:nth-child(n+324):nth-child(-n+328) {background-color:#fff;}
 .grid-container div:nth-child(n+344):nth-child(-n+350) {background-color:#fff;}
 .grid-container div:nth-child(n+367):nth-child(-n+369) {background-color:#fff;}
-.grid-container div:nth-child(n+382):nth-child(-n+396) {background-color:#fff;}
+.grid-container div:nth-child(n+382):nth-child(-n+387) {background-color:#fff;}
+.grid-container div:nth-child(n+391):nth-child(-n+396) {background-color:#fff;}
 .grid-container div:nth-child(277), 
 .grid-container div:nth-child(278),
 .grid-container div:nth-child(290),
@@ -200,6 +201,7 @@
  {background-color:white;}
 .grid-container div:nth-child(n+320):nth-child(-n+323) {background-color:black;}
 .grid-container div:nth-child(n+329):nth-child(-n+332) {background-color:black;}
+.grid-container div:nth-child(n+388):nth-child(-n+390) {background-color:black;}
 .grid-container div:nth-child(279),
 .grid-container div:nth-child(280),
 .grid-container div:nth-child(288),
@@ -215,6 +217,7 @@
 .grid-container div:nth-child(351),
 .grid-container div:nth-child(352),
 .grid-container div:nth-child(366),
+.grid-container div:nth-child(370),
 .grid-container div:nth-child(370)
  {background-color:black;}
 .grid-container div:nth-child(341),
