--- a/projects.html
+++ b/projects.html
@@ -15,6 +15,7 @@
 			<li><a href="Library/index.html">Library</a></li>
 			<li><a href="recipes/index.html">Family Recipe</a></li>
 			<li><a href="zoo/index.html">Zoo</a></li>
+			<li><a href="icecreamform.html">IceCreamForm</a></li>
 		</ol>
 	</main> 
 	<section>
