--- a/image_gallery.html
+++ b/image_gallery.html
@@ -15,6 +15,8 @@
 		<img id="F" src="image/muffin.jpeg" alt="me">
 			<figcaption>Added a 0.5 opacity</figcaption>
 		<img id="I" src="image/muffin.jpeg" alt="me">
+			<figcaption>Added a rounded image</figcaption>
 		<img id="N" src="image/muffin.jpeg" alt="me">
+			<figcaption>Added a flip imaged feature</figcaption>
         </body>
 
