--- a/image_gallery.html
+++ b/image_gallery.html
@@ -6,8 +6,9 @@
                 <link rel="stylesheet" type="text/css" href="image_gallery.css">
         </head>
         <body>
+		<h1>The z-index Property</h1>
         	<img id="M" src="image/muffin.jpeg" alt="me">
-			<figcaption>Added a 2px solid border</figcaption> 
+			<p>Added a 2px solid border and a z-index of -1</p>
 		<img id="U" src="image/muffin.jpeg" alt="me">
 			<figcaption>Added a shadow box</figcaption>
 		<img id="f" src="image/muffin.jpeg" alt="me">
