--- a/projects.html
+++ b/projects.html
@@ -16,6 +16,7 @@
 			<li><a href="recipes/index.html">Family Recipe</a></li>
 			<li><a href="zoo/index.html">Zoo</a></li>
 			<li><a href="icecreamform.html">IceCreamForm</a></li>
+			<li><a href="image_gallery.html">Image Gallery</a></li>
 		</ol>
 	</main> 
 	<section>
