--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 		<a id="projects" href="projects.html">Projects</a>
 
 		<img id="me" src="image/me.jpg" alt="me">
-</div>
-</body>
+		</div>
+		<img src="image/sun.jpeg" alt="sunrise vs sunset" usemap="sun">
+	</body>
 </html>
