--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 		<img id="me" src="image/me.jpg" alt="me">
 		</div>
-		<img src="image/sun.jpeg" alt="sunrise vs sunset" usemap="#sun">
+		<img id="sun" src="image/sun.jpeg" alt="sunrise vs sunset" usemap="#sun">
 		<map name="sun">
                 <area shape="rect" title="sunrise" coords="80,80,275,450" href="https://www.youtube.com/watch?v=o_kgdCGisso" alt="sunrise video">
                 <area shape="rect" title="sunset" coords="540,75,745,460" href="https://www.youtube.com/watch?v=q1vN28g7OhI" alt="sunset video">
