--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
 		</div>
 		<img id="sun" src="image/sun.jpeg" alt="sunrise vs sunset" usemap="#sun">
 		<map name="sun">
-                <area shape="rect" title="sunrise" coords="80,80,275,450" href="https://www.youtube.com/watch?v=o_kgdCGisso" alt="sunrise video">
-                <area shape="rect" title="sunset" coords="540,75,745,460" href="https://www.youtube.com/watch?v=q1vN28g7OhI" alt="sunset video">
+                <area shape="rect" title="sunrise" coords="80,80,275,450" href="https://www.youtube.com/watch?v=9bQTBzMFfFk" alt="sunrise video">
                 </map>
 	</body>
 </html>
