--- a/projects.html
+++ b/projects.html
@@ -17,6 +17,7 @@
 			<li><a href="zoo/index.html">Zoo</a></li>
 			<li><a href="icecreamform.html">IceCreamForm</a></li>
 			<li><a href="image_gallery.html">Image Gallery</a></li>
+			<li><a href="myvideo.html">My Video</a></li>
 		</ol>
 	</main> 
 	<section>
