--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 		<blockquote id="quote" cite="http://www.pinterest.com/pin/844493673222587/">Give up when you're done, not tired</blockquote>
  
 	
-		<a id="journal" href="Journal/">Click here to read my journal</a>
-		<a id="projects" href="projects.html">Projects</a>	
+		<a class="color-change" id="journal" href="Journal/">Click here to read my journal</a>
+		<a class="color-change" id="projects" href="projects.html">Projects</a>	
 
 		<img id="me" src="image/me.jpg" alt="me">
 		</div>
