--- a/projects.html
+++ b/projects.html
@@ -18,6 +18,7 @@
 			<li><a href="icecreamform.html">IceCreamForm</a></li>
 			<li><a href="image_gallery.html">Image Gallery</a></li>
 			<li><a href="myvideo.html">My Video</a></li>
+			<li><a href="emoji.html">My Emoji</a></li>
 		</ol>
 	</main> 
 	<section>
