--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<blockquote id="quote" cite="http://www.pinterest.com/pin/844493673222587/">Give up when you're done, not tired</blockquote>
  
 	
-		<a class="color-change" id="journal" href="Journal/">Click here to read my journal</a>
+		<a class="color-change" id="journal" href="Journal/" style="opacity:1; color:rgb(0,0,238);background-color: rgb(200,136,124);">Click here to read my journal</a>
 		<a class="color-change" id="projects" href="projects.html">Projects</a>	
 
 		<img id="me" src="image/me.jpg" alt="me">
