--- a/projects.html
+++ b/projects.html
@@ -20,6 +20,7 @@
 			<li><a href="myvideo.html">My Video</a></li>
 			<li><a href="self_portrait.html">My self portrait</a></li>
 			<li><a href="emoji.html">My Emoji</a></li>
+			<li><a href="js_func_canvas.html">JS Circles</a></li>
 		</ol>
 	</main> 
 	<section>
