--- a/projects.html
+++ b/projects.html
@@ -21,6 +21,7 @@
 			<li><a href="self_portrait.html">My self portrait</a></li>
 			<li><a href="emoji.html">My Emoji</a></li>
 			<li><a href="js_func_canvas.html">JS Circles</a></li>
+			<li><a href="canvas_js/house_js.html">JS House</a></li>
 		</ol>
 	</main> 
 	<section>
